[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Bomb/bomba.png" type="Texture" id=1]
[ext_resource path="res://Assets/Bomb/bomb_ticking.png" type="Texture" id=2]
[ext_resource path="res://src/Other/Bomb.gd" type="Script" id=3]
[ext_resource path="res://Music/Random/bomb_tick.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 4 )

[node name="Bomb" type="KinematicBody2D"]
pause_mode = 1
position = Vector2( 0, 3 )
collision_layer = 2048
collision_mask = 8
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 13
playing = true
offset = Vector2( 0, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="Wall" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Friction" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Friction"]
position = Vector2( 0, 8 )
shape = SubResource( 4 )

[node name="Whip" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Whip"]
position = Vector2( 0, 4 )
shape = SubResource( 5 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 1.5

[connection signal="body_entered" from="Wall" to="." method="_on_Wall_body_entered"]
[connection signal="body_entered" from="Friction" to="." method="_on_Friction_body_entered"]
[connection signal="area_entered" from="Whip" to="." method="_on_Whip_area_entered"]
